<resources>
    <string name="app_name">Nao Remote Control</string>
    <string name="Connexion">Connexion</string>
    <string name="Speech">Speech</string>
    <string name="IPAddress">IP Address</string>
    <string name="IPAddressFormat">xxx.xxx.xxx.xxx</string>
    <string name="Disconected">Disconected</string>
    <string name="Connected">Connected</string>
    <string name="SaveIP">Save IP</string>
    <string name="ErrorDirectory">The directory Nao Remote Control could not be created</string>
    <string name="ErrorFile">Cannot write file, check permissions</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Remove</string>
    <string name="TypeYourSpeech">Type your speech</string>
    <string name="ServerSettings">Server settings</string>
    <string name="ServerConnexion">Server connexion</string>
    <string name="ServerAdress">Server address</string>
    <string name="SaveServer">Save server address</string>
    <string name="ServerConfiguration">Server configuration</string>
    <string name="ErrorIPNotValid">Please, enter a valid IP address</string>
    <string name="ErrorNoItemSelected">The list does not contain any address</string>
    <string name="ErrorEmptyList">Empty list !</string>
    <string name="AutoConnexion">Automatic Login</string>
    <string name="ErrorIPExists">This address is already saved</string>
    <string name="AdrressSavedSucces">The address was saved</string>
    <string name="ConnexionStatus">Connexion status</string>
    <string name="ErrorConnectServer">Connexion failed</string>
    <string name="ErrorAlreadyConnected">You are already connected on the server</string>
    <string name="AttemptingToConnectToServer">Attempting to connect to server...</string>
    <string name="RobotConnexion">Robot connexion</string>
    <string name="RobotAdress">Robot address</string>
    <string name="SavedSpeeches">Saved speeches</string>
    <string name="Settings">Settings</string>
    <string name="Volume">Volume</string>
    <string name="Langage">Language</string>
    <string name="Status">State</string>
    <string name="Name">Name : </string>
    <string name="ChangeName">Change name</string>
    <string name="SpeechSaveSucces">Speech saved !</string>
    <string name="LEDConfig">LED configuration</string>
    <string name="AnimatedSpeech">Animated speech</string>
    <string name="Move">Move</string>
    <string name="Dances">Dances</string>
    <string name="Posture">Postures</string>
    <string name="TakePosture">Take posture</string>
    <string name="Walk">Walk</string>
    <string name="Frequency">Frequency</string>
    <string name="SecondVoice">Second voice frequency</string>
    <string name="SecondVoiceLevel">Second voice level</string>
    <string name="SecondVoiceTimeShift">Second voice time shift</string>
    <string name="Voice">Voice</string>
    <string name="Behavior">Behavior</string>
    <string name="SetBehavior">Set behavior</string>
    <string name="StopMotors">Relax (stop motors)</string>
    <string name="TypeNaoName"> Type name here</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Reboot">Reboot</string>
    <string name="AllLEDs">All LEDs</string>
    <string name="Reset">Reset all</string>
    <string name="Eyes">Eyes</string>
    <string name="Feet">Feet</string>
    <string name="Ears">Ears</string>
    <string name="Chest">Chest</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Others">Others</string>
    <string name="SetColor">Set color</string>
    <string name="AutonomousLife">Auonomous life  </string>
    <string name="ShutdownNao">Shutdown NAO</string>
    <string name="RebootNao">Reboot NAO</string>
    <string name="Help">Help</string>
    <string name="ServerStatus">Server connexion</string>
    <string name="RobotStatus">Robot connexion</string>
    <string name="Deconnexion">Logout</string>
    <string name="HelpIntroduction">In order to use this application, all you have to do is connect to your NAO robot. This can be done in three steps :</string>
    <string name="HelpTitle1">1- Run the server</string>
    <string name="HelpTitle2">2- Connect to the server</string>
    <string name="HelpTitle3">3- Connect the server to the robot</string>
    <string name="HelpRunServer">On a computer with a Linux Distribution, run NAO Server by double clicking on the icon</string>
    <string name="HelpConnectServer">With the application , connect to the server with IP address of step 1.</string>
    <string name="HelpConnectRobot">Si vous êtes connecté au serveur, une nouvelle rubrique apparaît. Vous pouvez configurer le serveur pour qu\'il se connecte au robot en indiquant son adresse IP (pour la connaître, appuyez sur le bouton au milieu de la poitrine de NAO).</string>

</resources>
