<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HelpIntroduction"
            style="@style/NormalText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HelpTitles"
            android:text="@string/HelpTitle1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HelpTitles"
            android:text="@string/HelpTitle2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HelpTitles"
            android:text="@string/HelpTitle3"/>

    </LinearLayout>

</ScrollView>