<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/blur_background"
    android:id="@+id/ChangeNameLayout">
    <LinearLayout
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:text="@string/ChangeName"/>

        <EditText
            android:id="@+id/NewNameEditText"
            android:theme="@style/EditTextStyle"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TypeNaoName"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ValidNameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Element"
                android:layout_margin="10dp"
                android:text="@string/OK"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/CancelNameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Element"
                android:layout_margin="10dp"
                android:text="@string/Cancel"
                android:layout_weight="0.5"/>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
