<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/ConnexionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/SubTitle"
            android:text="@string/ServerConnexion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ServerIPAdressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/ServerAdress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/IPAdressServer"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/IPAddressFormat"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="15"
                android:theme="@style/EditTextStyle"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/SaveServerAdressButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/save_state"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/LoginServerButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_state" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/WaitConnexionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:indeterminateDrawable="@drawable/loading"
            android:visibility="gone"/>
        <Button
            android:id="@+id/AutomaticConnexionButton"
            style="@style/Element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/AutoConnexion"
            android:textAllCaps="false" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SpinnerServerAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@android:style/Theme.Holo.Light"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/RemoveServerAdressButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/trash_state" />

            <Button
                android:id="@+id/LoginServerButton2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_state" />
        </LinearLayout>

        <include layout="@layout/divider"/>

        <TextView
            style="@style/SubTitle"
            android:text="@string/ConnexionStatus"/>

        <TextView
            android:id="@+id/ConnexionStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Disconected"
            android:layout_marginLeft="10dp"
            style="@style/NormalText"/>

        <Button
            android:id="@+id/ConnexionStatusButton"
            style="@style/Element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:text="@string/Disconected" />

        <include layout="@layout/server_config"
            android:visibility="gone"
            android:id="@+id/ServerConfigLayout"></include>

    </LinearLayout>


</ScrollView>

